tests/rosetta/out/C/21-game.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:23:42Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:23:42Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <time.h>

typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_input() {
  char buf[1024];
  if (!fgets(buf, sizeof(buf), stdin))
    return strdup("");
  size_t len = strlen(buf);
  if (len > 0 && buf[len - 1] == '\n')
    buf[len - 1] = '\0';
  return strdup(buf);
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static long long _now() {
  struct timespec ts;
  clock_gettime(CLOCK_REALTIME, &ts);
  return (long long)ts.tv_sec * 1000000000LL + ts.tv_nsec;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int parseIntStr(char *str) {
  int i = 0;
  int neg = 0;
  char *tmp1 = slice_string(str, 0, 1);
  if ((str.len > 0 && tmp1 == "-")) {
    neg = 1;
    i = 1;
  }
  int n = 0;
  map_string_int tmp2 = map_string_int_create(10);
  map_string_int_put(&tmp2, "0", 0);
  map_string_int_put(&tmp2, "1", 1);
  map_string_int_put(&tmp2, "2", 2);
  map_string_int_put(&tmp2, "3", 3);
  map_string_int_put(&tmp2, "4", 4);
  map_string_int_put(&tmp2, "5", 5);
  map_string_int_put(&tmp2, "6", 6);
  map_string_int_put(&tmp2, "7", 7);
  map_string_int_put(&tmp2, "8", 8);
  map_string_int_put(&tmp2, "9", 9);
  map_string_int digits = tmp2;
  while ((i < str.len)) {
    char *tmp3 = slice_string(str, i, i + 1);
    n = n * 10 + map_string_int_get(digits, tmp3);
    i = i + 1;
  }
  if (neg) {
    n = (-n);
  }
  return n;
}

int mochi_main() {
  int total = 0;
  int computer = _now() % 2 == 0;
  printf("Enter q to quit at any time\\n\n");
  if (computer) {
    printf("The computer will choose first\n");
  } else {
    printf("You will choose first\n");
  }
  printf("\\n\\nRunning total is now 0\\n\\n\n");
  int round = 1;
  int done = 0;
  while ((!done)) {
    char *tmp4 = _str(round);
    char *tmp5 = concat_string("ROUND ", tmp4);
    char *tmp6 = concat_string(tmp5, ":\n\n");
    printf("%s\n", tmp6);
    int i = 0;
    while (i < 2 && ((!done))) {
      if (computer) {
        int choice = 0;
        if (total < 18) {
          choice = _now() % 3 + 1;
        } else {
          choice = 21 - total;
        }
        total = total + choice;
        char *tmp7 = _str(choice);
        char *tmp8 = concat_string("The computer chooses ", tmp7);
        printf("%s\n", tmp8);
        char *tmp9 = _str(total);
        char *tmp10 = concat_string("Running total is now ", tmp9);
        printf("%s\n", tmp10);
        if (total == 21) {
          printf("\\nSo, commiserations, the computer has won!\n");
          done = 1;
        }
      } else {
        while (1) {
          printf("Your choice 1 to 3 : \n");
          char *line = _input();
          if ((strcmp(line, "q") == 0) || line == "Q") {
            printf("OK, quitting the game\n");
            done = 1;
            break;
          }
          int num = parseIntStr(line);
          if ((num < 1 || num > 3)) {
            if ((total + num > 21)) {
              printf("Too big, try again\n");
            } else {
              printf("Out of range, try again\n");
            }
            continue;
          }
          if ((total + num > 21)) {
            printf("Too big, try again\n");
            continue;
          }
          total = total + num;
          char *tmp11 = _str(total);
          char *tmp12 = concat_string("Running total is now ", tmp11);
          printf("%s\n", tmp12);
          break;
        }
        if (total == 21) {
          printf("\\nSo, congratulations, you've won!\n");
          done = 1;
        }
      }
      printf("\\n\n");
      computer = (!computer);
      i = i + 1;
    }
    round = round + 1;
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
